Pars/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> state
Rule 2     state -> state statement
Rule 3     state -> statement
Rule 4     statement -> declaration SEMICOLON NEWLINE
Rule 5     statement -> assignment SEMICOLON NEWLINE
Rule 6     statement -> compare SEMICOLON NEWLINE
Rule 7     statement -> prison SEMICOLON NEWLINE
Rule 8     statement -> if NEWLINE
Rule 9     statement -> while NEWLINE
Rule 10    statement -> operator SEMICOLON NEWLINE
Rule 11    statement -> function NEWLINE
Rule 12    statement -> function_call SEMICOLON NEWLINE
Rule 13    statement -> function_return SEMICOLON NEWLINE
Rule 14    statement -> declaration SEMICOLON
Rule 15    statement -> assignment SEMICOLON
Rule 16    statement -> compare SEMICOLON
Rule 17    statement -> prison SEMICOLON
Rule 18    statement -> if
Rule 19    statement -> while
Rule 20    statement -> operator SEMICOLON
Rule 21    statement -> function
Rule 22    statement -> function_call SEMICOLON
Rule 23    statement -> function_return SEMICOLON
Rule 24    statement -> declaration error NEWLINE
Rule 25    statement -> assignment error NEWLINE
Rule 26    statement -> compare error NEWLINE
Rule 27    statement -> prison error NEWLINE
Rule 28    statement -> operator error NEWLINE
Rule 29    statement -> function_call error NEWLINE
Rule 30    statement -> function_return error NEWLINE
Rule 31    declaration -> type VAR
Rule 32    declaration -> type VAR ASSIGNMENT expression
Rule 33    declaration -> CONST type VAR ASSIGNMENT expression
Rule 34    declaration -> MATRIX type VAR
Rule 35    declaration -> MATRIX type VAR LBRACKET expression COMMA expression RBRACKET
Rule 36    declaration -> error VAR
Rule 37    declaration -> error VAR ASSIGNMENT expression
Rule 38    declaration -> CONST error VAR ASSIGNMENT expression
Rule 39    declaration -> MATRIX error VAR
Rule 40    declaration -> MATRIX error VAR LBRACKET expression COMMA expression RBRACKET
Rule 41    type -> SIGNED
Rule 42    type -> UNSIGNED
Rule 43    type -> CELL
Rule 44    expression -> math_expression
Rule 45    expression -> const
Rule 46    expression -> variable
Rule 47    expression -> side
Rule 48    expression -> compare
Rule 49    expression -> prison
Rule 50    expression -> function_call
Rule 51    expression -> LBRACKET expression RBRACKET
Rule 52    side -> LBRACKET directions RBRACKET
Rule 53    side -> LBRACKET error RBRACKET
Rule 54    directions -> direction COMMA directions
Rule 55    directions -> direction
Rule 56    direction -> TOP
Rule 57    direction -> NTOP
Rule 58    direction -> LEFT
Rule 59    direction -> NLEFT
Rule 60    direction -> RIGHT
Rule 61    direction -> NRIGHT
Rule 62    direction -> DOWN
Rule 63    direction -> NDOWN
Rule 64    direction -> BOTTOM
Rule 65    compare -> expression EQ expression
Rule 66    compare -> expression LESS expression
Rule 67    compare -> expression GREATER expression
Rule 68    compare -> expression NOTEQ expression
Rule 69    math_expression -> expression PLUS expression
Rule 70    math_expression -> expression MINUS expression
Rule 71    math_expression -> expression STAR expression
Rule 72    math_expression -> expression DIV expression
Rule 73    math_expression -> expression PROCENT expression
Rule 74    const -> DECIMAL
Rule 75    const -> UDECIMAL
Rule 76    variable -> VAR
Rule 77    variable -> VAR LBRACKET index COMMA index RBRACKET
Rule 78    index -> expression
Rule 79    prison -> SHARP variable
Rule 80    assignment -> variable ASSIGNMENT expression
Rule 81    assignment -> variable ASSIGNMENT error
Rule 82    if -> TESTONCE LBRACKET math_expression RBRACKET LBRACKET NEWLINE state RBRACKET
Rule 83    if -> TESTONCE LBRACKET compare RBRACKET LBRACKET NEWLINE state RBRACKET
Rule 84    if -> TESTONCE error
Rule 85    while -> TESTREP LBRACKET math_expression RBRACKET LBRACKET NEWLINE state RBRACKET
Rule 86    while -> TESTREP LBRACKET compare RBRACKET LBRACKET NEWLINE state RBRACKET
Rule 87    if -> TESTREP error
Rule 88    operator -> variable ASSIGNMENT robot
Rule 89    robot -> direction
Rule 90    robot -> XRAY
Rule 91    function -> FUNC VAR LBRACKET parameters RBRACKET LBRACKET NEWLINE state RBRACKET
Rule 92    function -> FUNC VAR LBRACKET RBRACKET LBRACKET NEWLINE state RBRACKET
Rule 93    function_return -> VAR
Rule 94    function_call -> CALL VAR LBRACKET vars RBRACKET
Rule 95    function_call -> CALL VAR LBRACKET RBRACKET
Rule 96    function_call -> VAR LBRACKET vars RBRACKET error
Rule 97    function_call -> VAR LBRACKET RBRACKET error
Rule 98    function_call -> CALL VAR LBRACKET error RBRACKET
Rule 99    vars -> VAR vars
Rule 100   vars -> VAR
Rule 101   parameters -> type VAR COMMA parameters
Rule 102   parameters -> type VAR

Terminals, with rules where they appear

ASSIGNMENT           : 32 33 37 38 80 81 88
BOTTOM               : 64
CALL                 : 94 95 98
CELL                 : 43
COMMA                : 35 40 54 77 101
CONST                : 33 38
DECIMAL              : 74
DIV                  : 72
DOWN                 : 62
EQ                   : 65
FUNC                 : 91 92
GREATER              : 67
LBRACKET             : 35 40 51 52 53 77 82 82 83 83 85 85 86 86 91 91 92 92 94 95 96 97 98
LEFT                 : 58
LESS                 : 66
MATRIX               : 34 35 39 40
MINUS                : 70
NDOWN                : 63
NEWLINE              : 4 5 6 7 8 9 10 11 12 13 24 25 26 27 28 29 30 82 83 85 86 91 92
NLEFT                : 59
NOTEQ                : 68
NRIGHT               : 61
NTOP                 : 57
PLUS                 : 69
PROCENT              : 73
RBRACKET             : 35 40 51 52 53 77 82 82 83 83 85 85 86 86 91 91 92 92 94 95 96 97 98
RIGHT                : 60
SEMICOLON            : 4 5 6 7 10 12 13 14 15 16 17 20 22 23
SHARP                : 79
SIGNED               : 41
STAR                 : 71
TESTONCE             : 82 83 84
TESTREP              : 85 86 87
TOP                  : 56
UDECIMAL             : 75
UNSIGNED             : 42
VAR                  : 31 32 33 34 35 36 37 38 39 40 76 77 91 92 93 94 95 96 97 98 99 100 101 102
XRAY                 : 90
error                : 24 25 26 27 28 29 30 36 37 38 39 40 53 81 84 87 96 97 98

Nonterminals, with rules where they appear

assignment           : 5 15 25
compare              : 6 16 26 48 83 86
const                : 45
declaration          : 4 14 24
direction            : 54 55 89
directions           : 52 54
expression           : 32 33 35 35 37 38 40 40 51 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 78 80
function             : 11 21
function_call        : 12 22 29 50
function_return      : 13 23 30
if                   : 8 18
index                : 77 77
math_expression      : 44 82 85
operator             : 10 20 28
parameters           : 91 101
prison               : 7 17 27 49
program              : 0
robot                : 88
side                 : 47
state                : 1 2 82 83 85 86 91 92
statement            : 2 3
type                 : 31 32 33 34 35 101 102
variable             : 46 79 80 81 88
vars                 : 94 96 99
while                : 9 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . state
    (2) state -> . state statement
    (3) state -> . statement
    (4) statement -> . declaration SEMICOLON NEWLINE
    (5) statement -> . assignment SEMICOLON NEWLINE
    (6) statement -> . compare SEMICOLON NEWLINE
    (7) statement -> . prison SEMICOLON NEWLINE
    (8) statement -> . if NEWLINE
    (9) statement -> . while NEWLINE
    (10) statement -> . operator SEMICOLON NEWLINE
    (11) statement -> . function NEWLINE
    (12) statement -> . function_call SEMICOLON NEWLINE
    (13) statement -> . function_return SEMICOLON NEWLINE
    (14) statement -> . declaration SEMICOLON
    (15) statement -> . assignment SEMICOLON
    (16) statement -> . compare SEMICOLON
    (17) statement -> . prison SEMICOLON
    (18) statement -> . if
    (19) statement -> . while
    (20) statement -> . operator SEMICOLON
    (21) statement -> . function
    (22) statement -> . function_call SEMICOLON
    (23) statement -> . function_return SEMICOLON
    (24) statement -> . declaration error NEWLINE
    (25) statement -> . assignment error NEWLINE
    (26) statement -> . compare error NEWLINE
    (27) statement -> . prison error NEWLINE
    (28) statement -> . operator error NEWLINE
    (29) statement -> . function_call error NEWLINE
    (30) statement -> . function_return error NEWLINE
    (31) declaration -> . type VAR
    (32) declaration -> . type VAR ASSIGNMENT expression
    (33) declaration -> . CONST type VAR ASSIGNMENT expression
    (34) declaration -> . MATRIX type VAR
    (35) declaration -> . MATRIX type VAR LBRACKET expression COMMA expression RBRACKET
    (36) declaration -> . error VAR
    (37) declaration -> . error VAR ASSIGNMENT expression
    (38) declaration -> . CONST error VAR ASSIGNMENT expression
    (39) declaration -> . MATRIX error VAR
    (40) declaration -> . MATRIX error VAR LBRACKET expression COMMA expression RBRACKET
    (80) assignment -> . variable ASSIGNMENT expression
    (81) assignment -> . variable ASSIGNMENT error
    (65) compare -> . expression EQ expression
    (66) compare -> . expression LESS expression
    (67) compare -> . expression GREATER expression
    (68) compare -> . expression NOTEQ expression
    (79) prison -> . SHARP variable
    (82) if -> . TESTONCE LBRACKET math_expression RBRACKET LBRACKET NEWLINE state RBRACKET
    (83) if -> . TESTONCE LBRACKET compare RBRACKET LBRACKET NEWLINE state RBRACKET
    (84) if -> . TESTONCE error
    (87) if -> . TESTREP error
    (85) while -> . TESTREP LBRACKET math_expression RBRACKET LBRACKET NEWLINE state RBRACKET
    (86) while -> . TESTREP LBRACKET compare RBRACKET LBRACKET NEWLINE state RBRACKET
    (88) operator -> . variable ASSIGNMENT robot
    (91) function -> . FUNC VAR LBRACKET parameters RBRACKET LBRACKET NEWLINE state RBRACKET
    (92) function -> . FUNC VAR LBRACKET RBRACKET LBRACKET NEWLINE state RBRACKET
    (94) function_call -> . CALL VAR LBRACKET vars RBRACKET
    (95) function_call -> . CALL VAR LBRACKET RBRACKET
    (96) function_call -> . VAR LBRACKET vars RBRACKET error
    (97) function_call -> . VAR LBRACKET RBRACKET error
    (98) function_call -> . CALL VAR LBRACKET error RBRACKET
    (93) function_return -> . VAR
    (41) type -> . SIGNED
    (42) type -> . UNSIGNED
    (43) type -> . CELL
    (76) variable -> . VAR
    (77) variable -> . VAR LBRACKET index COMMA index RBRACKET
    (44) expression -> . math_expression
    (45) expression -> . const
    (46) expression -> . variable
    (47) expression -> . side
    (48) expression -> . compare
    (49) expression -> . prison
    (50) expression -> . function_call
    (51) expression -> . LBRACKET expression RBRACKET
    (69) math_expression -> . expression PLUS expression
    (70) math_expression -> . expression MINUS expression
    (71) math_expression -> . expression STAR expression
    (72) math_expression -> . expression DIV expression
    (73) math_expression -> . expression PROCENT expression
    (74) const -> . DECIMAL
    (75) const -> . UDECIMAL
    (52) side -> . LBRACKET directions RBRACKET
    (53) side -> . LBRACKET error RBRACKET

    CONST           shift and go to state 18
    MATRIX          shift and go to state 19
    error           shift and go to state 14
    SHARP           shift and go to state 22
    TESTONCE        shift and go to state 23
    TESTREP         shift and go to state 25
    FUNC            shift and go to state 26
    CALL            shift and go to state 27
    VAR             shift and go to state 16
    SIGNED          shift and go to state 28
    UNSIGNED        shift and go to state 29
    CELL            shift and go to state 30
    LBRACKET        shift and go to state 20
    DECIMAL         shift and go to state 33
    UDECIMAL        shift and go to state 34

    program                        shift and go to state 1
    state                          shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    compare                        shift and go to state 6
    prison                         shift and go to state 7
    if                             shift and go to state 8
    while                          shift and go to state 9
    operator                       shift and go to state 10
    function                       shift and go to state 11
    function_call                  shift and go to state 12
    function_return                shift and go to state 13
    type                           shift and go to state 15
    expression                     shift and go to state 17
    variable                       shift and go to state 21
    math_expression                shift and go to state 24
    const                          shift and go to state 31
    side                           shift and go to state 32

state 1

    (0) S' -> program .



state 2

    (1) program -> state .
    (2) state -> state . statement
    (4) statement -> . declaration SEMICOLON NEWLINE
    (5) statement -> . assignment SEMICOLON NEWLINE
    (6) statement -> . compare SEMICOLON NEWLINE
    (7) statement -> . prison SEMICOLON NEWLINE
    (8) statement -> . if NEWLINE
    (9) statement -> . while NEWLINE
    (10) statement -> . operator SEMICOLON NEWLINE
    (11) statement -> . function NEWLINE
    (12) statement -> . function_call SEMICOLON NEWLINE
    (13) statement -> . function_return SEMICOLON NEWLINE
    (14) statement -> . declaration SEMICOLON
    (15) statement -> . assignment SEMICOLON
    (16) statement -> . compare SEMICOLON
    (17) statement -> . prison SEMICOLON
    (18) statement -> . if
    (19) statement -> . while
    (20) statement -> . operator SEMICOLON
    (21) statement -> . function
    (22) statement -> . function_call SEMICOLON
    (23) statement -> . function_return SEMICOLON
    (24) statement -> . declaration error NEWLINE
    (25) statement -> . assignment error NEWLINE
    (26) statement -> . compare error NEWLINE
    (27) statement -> . prison error NEWLINE
    (28) statement -> . operator error NEWLINE
    (29) statement -> . function_call error NEWLINE
    (30) statement -> . function_return error NEWLINE
    (31) declaration -> . type VAR
    (32) declaration -> . type VAR ASSIGNMENT expression
    (33) declaration -> . CONST type VAR ASSIGNMENT expression
    (34) declaration -> . MATRIX type VAR
    (35) declaration -> . MATRIX type VAR LBRACKET expression COMMA expression RBRACKET
    (36) declaration -> . error VAR
    (37) declaration -> . error VAR ASSIGNMENT expression
    (38) declaration -> . CONST error VAR ASSIGNMENT expression
    (39) declaration -> . MATRIX error VAR
    (40) declaration -> . MATRIX error VAR LBRACKET expression COMMA expression RBRACKET
    (80) assignment -> . variable ASSIGNMENT expression
    (81) assignment -> . variable ASSIGNMENT error
    (65) compare -> . expression EQ expression
    (66) compare -> . expression LESS expression
    (67) compare -> . expression GREATER expression
    (68) compare -> . expression NOTEQ expression
    (79) prison -> . SHARP variable
    (82) if -> . TESTONCE LBRACKET math_expression RBRACKET LBRACKET NEWLINE state RBRACKET
    (83) if -> . TESTONCE LBRACKET compare RBRACKET LBRACKET NEWLINE state RBRACKET
    (84) if -> . TESTONCE error
    (87) if -> . TESTREP error
    (85) while -> . TESTREP LBRACKET math_expression RBRACKET LBRACKET NEWLINE state RBRACKET
    (86) while -> . TESTREP LBRACKET compare RBRACKET LBRACKET NEWLINE state RBRACKET
    (88) operator -> . variable ASSIGNMENT robot
    (91) function -> . FUNC VAR LBRACKET parameters RBRACKET LBRACKET NEWLINE state RBRACKET
    (92) function -> . FUNC VAR LBRACKET RBRACKET LBRACKET NEWLINE state RBRACKET
    (94) function_call -> . CALL VAR LBRACKET vars RBRACKET
    (95) function_call -> . CALL VAR LBRACKET RBRACKET
    (96) function_call -> . VAR LBRACKET vars RBRACKET error
    (97) function_call -> . VAR LBRACKET RBRACKET error
    (98) function_call -> . CALL VAR LBRACKET error RBRACKET
    (93) function_return -> . VAR
    (41) type -> . SIGNED
    (42) type -> . UNSIGNED
    (43) type -> . CELL
    (76) variable -> . VAR
    (77) variable -> . VAR LBRACKET index COMMA index RBRACKET
    (44) expression -> . math_expression
    (45) expression -> . const
    (46) expression -> . variable
    (47) expression -> . side
    (48) expression -> . compare
    (49) expression -> . prison
    (50) expression -> . function_call
    (51) expression -> . LBRACKET expression RBRACKET
    (69) math_expression -> . expression PLUS expression
    (70) math_expression -> . expression MINUS expression
    (71) math_expression -> . expression STAR expression
    (72) math_expression -> . expression DIV expression
    (73) math_expression -> . expression PROCENT expression
    (74) const -> . DECIMAL
    (75) const -> . UDECIMAL
    (52) side -> . LBRACKET directions RBRACKET
    (53) side -> . LBRACKET error RBRACKET

    $end            reduce using rule 1 (program -> state .)
    CONST           shift and go to state 18
    MATRIX          shift and go to state 19
    error           shift and go to state 14
    SHARP           shift and go to state 22
    TESTONCE        shift and go to state 23
    TESTREP         shift and go to state 25
    FUNC            shift and go to state 26
    CALL            shift and go to state 27
    VAR             shift and go to state 16
    SIGNED          shift and go to state 28
    UNSIGNED        shift and go to state 29
    CELL            shift and go to state 30
    LBRACKET        shift and go to state 20
    DECIMAL         shift and go to state 33
    UDECIMAL        shift and go to state 34

    statement                      shift and go to state 35
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    compare                        shift and go to state 6
    prison                         shift and go to state 7
    if                             shift and go to state 8
    while                          shift and go to state 9
    operator                       shift and go to state 10
    function                       shift and go to state 11
    function_call                  shift and go to state 12
    function_return                shift and go to state 13
    type                           shift and go to state 15
    expression                     shift and go to state 17
    variable                       shift and go to state 21
    math_expression                shift and go to state 24
    const                          shift and go to state 31
    side                           shift and go to state 32

state 3

    (3) state -> statement .

    CONST           reduce using rule 3 (state -> statement .)
    MATRIX          reduce using rule 3 (state -> statement .)
    error           reduce using rule 3 (state -> statement .)
    SHARP           reduce using rule 3 (state -> statement .)
    TESTONCE        reduce using rule 3 (state -> statement .)
    TESTREP         reduce using rule 3 (state -> statement .)
    FUNC            reduce using rule 3 (state -> statement .)
    CALL            reduce using rule 3 (state -> statement .)
    VAR             reduce using rule 3 (state -> statement .)
    SIGNED          reduce using rule 3 (state -> statement .)
    UNSIGNED        reduce using rule 3 (state -> statement .)
    CELL            reduce using rule 3 (state -> statement .)
    LBRACKET        reduce using rule 3 (state -> statement .)
    DECIMAL         reduce using rule 3 (state -> statement .)
    UDECIMAL        reduce using rule 3 (state -> statement .)
    $end            reduce using rule 3 (state -> statement .)
    RBRACKET        reduce using rule 3 (state -> statement .)


state 4

    (4) statement -> declaration . SEMICOLON NEWLINE
    (14) statement -> declaration . SEMICOLON
    (24) statement -> declaration . error NEWLINE

    SEMICOLON       shift and go to state 36
    error           shift and go to state 37


state 5

    (5) statement -> assignment . SEMICOLON NEWLINE
    (15) statement -> assignment . SEMICOLON
    (25) statement -> assignment . error NEWLINE

    SEMICOLON       shift and go to state 38
    error           shift and go to state 39


state 6

    (6) statement -> compare . SEMICOLON NEWLINE
    (16) statement -> compare . SEMICOLON
    (26) statement -> compare . error NEWLINE
    (48) expression -> compare .

    SEMICOLON       shift and go to state 40
    error           shift and go to state 41
    EQ              reduce using rule 48 (expression -> compare .)
    LESS            reduce using rule 48 (expression -> compare .)
    GREATER         reduce using rule 48 (expression -> compare .)
    NOTEQ           reduce using rule 48 (expression -> compare .)
    PLUS            reduce using rule 48 (expression -> compare .)
    MINUS           reduce using rule 48 (expression -> compare .)
    STAR            reduce using rule 48 (expression -> compare .)
    DIV             reduce using rule 48 (expression -> compare .)
    PROCENT         reduce using rule 48 (expression -> compare .)


state 7

    (7) statement -> prison . SEMICOLON NEWLINE
    (17) statement -> prison . SEMICOLON
    (27) statement -> prison . error NEWLINE
    (49) expression -> prison .

    SEMICOLON       shift and go to state 42
    error           shift and go to state 43
    EQ              reduce using rule 49 (expression -> prison .)
    LESS            reduce using rule 49 (expression -> prison .)
    GREATER         reduce using rule 49 (expression -> prison .)
    NOTEQ           reduce using rule 49 (expression -> prison .)
    PLUS            reduce using rule 49 (expression -> prison .)
    MINUS           reduce using rule 49 (expression -> prison .)
    STAR            reduce using rule 49 (expression -> prison .)
    DIV             reduce using rule 49 (expression -> prison .)
    PROCENT         reduce using rule 49 (expression -> prison .)


state 8

    (8) statement -> if . NEWLINE
    (18) statement -> if .

    NEWLINE         shift and go to state 44
    CONST           reduce using rule 18 (statement -> if .)
    MATRIX          reduce using rule 18 (statement -> if .)
    error           reduce using rule 18 (statement -> if .)
    SHARP           reduce using rule 18 (statement -> if .)
    TESTONCE        reduce using rule 18 (statement -> if .)
    TESTREP         reduce using rule 18 (statement -> if .)
    FUNC            reduce using rule 18 (statement -> if .)
    CALL            reduce using rule 18 (statement -> if .)
    VAR             reduce using rule 18 (statement -> if .)
    SIGNED          reduce using rule 18 (statement -> if .)
    UNSIGNED        reduce using rule 18 (statement -> if .)
    CELL            reduce using rule 18 (statement -> if .)
    LBRACKET        reduce using rule 18 (statement -> if .)
    DECIMAL         reduce using rule 18 (statement -> if .)
    UDECIMAL        reduce using rule 18 (statement -> if .)
    $end            reduce using rule 18 (statement -> if .)
    RBRACKET        reduce using rule 18 (statement -> if .)


state 9

    (9) statement -> while . NEWLINE
    (19) statement -> while .

    NEWLINE         shift and go to state 45
    CONST           reduce using rule 19 (statement -> while .)
    MATRIX          reduce using rule 19 (statement -> while .)
    error           reduce using rule 19 (statement -> while .)
    SHARP           reduce using rule 19 (statement -> while .)
    TESTONCE        reduce using rule 19 (statement -> while .)
    TESTREP         reduce using rule 19 (statement -> while .)
    FUNC            reduce using rule 19 (statement -> while .)
    CALL            reduce using rule 19 (statement -> while .)
    VAR             reduce using rule 19 (statement -> while .)
    SIGNED          reduce using rule 19 (statement -> while .)
    UNSIGNED        reduce using rule 19 (statement -> while .)
    CELL            reduce using rule 19 (statement -> while .)
    LBRACKET        reduce using rule 19 (statement -> while .)
    DECIMAL         reduce using rule 19 (statement -> while .)
    UDECIMAL        reduce using rule 19 (statement -> while .)
    $end            reduce using rule 19 (statement -> while .)
    RBRACKET        reduce using rule 19 (statement -> while .)


state 10

    (10) statement -> operator . SEMICOLON NEWLINE
    (20) statement -> operator . SEMICOLON
    (28) statement -> operator . error NEWLINE

    SEMICOLON       shift and go to state 46
    error           shift and go to state 47


state 11

    (11) statement -> function . NEWLINE
    (21) statement -> function .

    NEWLINE         shift and go to state 48
    CONST           reduce using rule 21 (statement -> function .)
    MATRIX          reduce using rule 21 (statement -> function .)
    error           reduce using rule 21 (statement -> function .)
    SHARP           reduce using rule 21 (statement -> function .)
    TESTONCE        reduce using rule 21 (statement -> function .)
    TESTREP         reduce using rule 21 (statement -> function .)
    FUNC            reduce using rule 21 (statement -> function .)
    CALL            reduce using rule 21 (statement -> function .)
    VAR             reduce using rule 21 (statement -> function .)
    SIGNED          reduce using rule 21 (statement -> function .)
    UNSIGNED        reduce using rule 21 (statement -> function .)
    CELL            reduce using rule 21 (statement -> function .)
    LBRACKET        reduce using rule 21 (statement -> function .)
    DECIMAL         reduce using rule 21 (statement -> function .)
    UDECIMAL        reduce using rule 21 (statement -> function .)
    $end            reduce using rule 21 (statement -> function .)
    RBRACKET        reduce using rule 21 (statement -> function .)


state 12

    (12) statement -> function_call . SEMICOLON NEWLINE
    (22) statement -> function_call . SEMICOLON
    (29) statement -> function_call . error NEWLINE
    (50) expression -> function_call .

    SEMICOLON       shift and go to state 49
    error           shift and go to state 50
    EQ              reduce using rule 50 (expression -> function_call .)
    LESS            reduce using rule 50 (expression -> function_call .)
    GREATER         reduce using rule 50 (expression -> function_call .)
    NOTEQ           reduce using rule 50 (expression -> function_call .)
    PLUS            reduce using rule 50 (expression -> function_call .)
    MINUS           reduce using rule 50 (expression -> function_call .)
    STAR            reduce using rule 50 (expression -> function_call .)
    DIV             reduce using rule 50 (expression -> function_call .)
    PROCENT         reduce using rule 50 (expression -> function_call .)


state 13

    (13) statement -> function_return . SEMICOLON NEWLINE
    (23) statement -> function_return . SEMICOLON
    (30) statement -> function_return . error NEWLINE

    SEMICOLON       shift and go to state 51
    error           shift and go to state 52


state 14

    (36) declaration -> error . VAR
    (37) declaration -> error . VAR ASSIGNMENT expression

    VAR             shift and go to state 53


state 15

    (31) declaration -> type . VAR
    (32) declaration -> type . VAR ASSIGNMENT expression

    VAR             shift and go to state 54


state 16

    (96) function_call -> VAR . LBRACKET vars RBRACKET error
    (97) function_call -> VAR . LBRACKET RBRACKET error
    (93) function_return -> VAR .
    (76) variable -> VAR .
    (77) variable -> VAR . LBRACKET index COMMA index RBRACKET

    LBRACKET        shift and go to state 55
    SEMICOLON       reduce using rule 93 (function_return -> VAR .)
    error           reduce using rule 93 (function_return -> VAR .)
    ASSIGNMENT      reduce using rule 76 (variable -> VAR .)
    EQ              reduce using rule 76 (variable -> VAR .)
    LESS            reduce using rule 76 (variable -> VAR .)
    GREATER         reduce using rule 76 (variable -> VAR .)
    NOTEQ           reduce using rule 76 (variable -> VAR .)
    PLUS            reduce using rule 76 (variable -> VAR .)
    MINUS           reduce using rule 76 (variable -> VAR .)
    STAR            reduce using rule 76 (variable -> VAR .)
    DIV             reduce using rule 76 (variable -> VAR .)
    PROCENT         reduce using rule 76 (variable -> VAR .)


state 17

    (65) compare -> expression . EQ expression
    (66) compare -> expression . LESS expression
    (67) compare -> expression . GREATER expression
    (68) compare -> expression . NOTEQ expression
    (69) math_expression -> expression . PLUS expression
    (70) math_expression -> expression . MINUS expression
    (71) math_expression -> expression . STAR expression
    (72) math_expression -> expression . DIV expression
    (73) math_expression -> expression . PROCENT expression

    EQ              shift and go to state 56
    LESS            shift and go to state 57
    GREATER         shift and go to state 58
    NOTEQ           shift and go to state 59
    PLUS            shift and go to state 60
    MINUS           shift and go to state 61
    STAR            shift and go to state 62
    DIV             shift and go to state 63
    PROCENT         shift and go to state 64


state 18

    (33) declaration -> CONST . type VAR ASSIGNMENT expression
    (38) declaration -> CONST . error VAR ASSIGNMENT expression
    (41) type -> . SIGNED
    (42) type -> . UNSIGNED
    (43) type -> . CELL

    error           shift and go to state 66
    SIGNED          shift and go to state 28
    UNSIGNED        shift and go to state 29
    CELL            shift and go to state 30

    type                           shift and go to state 65

state 19

    (34) declaration -> MATRIX . type VAR
    (35) declaration -> MATRIX . type VAR LBRACKET expression COMMA expression RBRACKET
    (39) declaration -> MATRIX . error VAR
    (40) declaration -> MATRIX . error VAR LBRACKET expression COMMA expression RBRACKET
    (41) type -> . SIGNED
    (42) type -> . UNSIGNED
    (43) type -> . CELL

    error           shift and go to state 68
    SIGNED          shift and go to state 28
    UNSIGNED        shift and go to state 29
    CELL            shift and go to state 30

    type                           shift and go to state 67

state 20

    (51) expression -> LBRACKET . expression RBRACKET
    (52) side -> LBRACKET . directions RBRACKET
    (53) side -> LBRACKET . error RBRACKET
    (44) expression -> . math_expression
    (45) expression -> . const
    (46) expression -> . variable
    (47) expression -> . side
    (48) expression -> . compare
    (49) expression -> . prison
    (50) expression -> . function_call
    (51) expression -> . LBRACKET expression RBRACKET
    (54) directions -> . direction COMMA directions
    (55) directions -> . direction
    (69) math_expression -> . expression PLUS expression
    (70) math_expression -> . expression MINUS expression
    (71) math_expression -> . expression STAR expression
    (72) math_expression -> . expression DIV expression
    (73) math_expression -> . expression PROCENT expression
    (74) const -> . DECIMAL
    (75) const -> . UDECIMAL
    (76) variable -> . VAR
    (77) variable -> . VAR LBRACKET index COMMA index RBRACKET
    (52) side -> . LBRACKET directions RBRACKET
    (53) side -> . LBRACKET error RBRACKET
    (65) compare -> . expression EQ expression
    (66) compare -> . expression LESS expression
    (67) compare -> . expression GREATER expression
    (68) compare -> . expression NOTEQ expression
    (79) prison -> . SHARP variable
    (94) function_call -> . CALL VAR LBRACKET vars RBRACKET
    (95) function_call -> . CALL VAR LBRACKET RBRACKET
    (96) function_call -> . VAR LBRACKET vars RBRACKET error
    (97) function_call -> . VAR LBRACKET RBRACKET error
    (98) function_call -> . CALL VAR LBRACKET error RBRACKET
    (56) direction -> . TOP
    (57) direction -> . NTOP
    (58) direction -> . LEFT
    (59) direction -> . NLEFT
    (60) direction -> . RIGHT
    (61) direction -> . NRIGHT
    (62) direction -> . DOWN
    (63) direction -> . NDOWN
    (64) direction -> . BOTTOM

    error           shift and go to state 71
    LBRACKET        shift and go to state 20
    DECIMAL         shift and go to state 33
    UDECIMAL        shift and go to state 34
    VAR             shift and go to state 77
    SHARP           shift and go to state 22
    CALL            shift and go to state 27
    TOP             shift and go to state 78
    NTOP            shift and go to state 79
    LEFT            shift and go to state 80
    NLEFT           shift and go to state 81
    RIGHT           shift and go to state 82
    NRIGHT          shift and go to state 83
    DOWN            shift and go to state 84
    NDOWN           shift and go to state 85
    BOTTOM          shift and go to state 86

    expression                     shift and go to state 69
    directions                     shift and go to state 70
    math_expression                shift and go to state 24
    const                          shift and go to state 31
    variable                       shift and go to state 72
    side                           shift and go to state 32
    compare                        shift and go to state 73
    prison                         shift and go to state 74
    function_call                  shift and go to state 75
    direction                      shift and go to state 76

state 21

    (80) assignment -> variable . ASSIGNMENT expression
    (81) assignment -> variable . ASSIGNMENT error
    (88) operator -> variable . ASSIGNMENT robot
    (46) expression -> variable .

    ASSIGNMENT      shift and go to state 87
    EQ              reduce using rule 46 (expression -> variable .)
    LESS            reduce using rule 46 (expression -> variable .)
    GREATER         reduce using rule 46 (expression -> variable .)
    NOTEQ           reduce using rule 46 (expression -> variable .)
    PLUS            reduce using rule 46 (expression -> variable .)
    MINUS           reduce using rule 46 (expression -> variable .)
    STAR            reduce using rule 46 (expression -> variable .)
    DIV             reduce using rule 46 (expression -> variable .)
    PROCENT         reduce using rule 46 (expression -> variable .)


state 22

    (79) prison -> SHARP . variable
    (76) variable -> . VAR
    (77) variable -> . VAR LBRACKET index COMMA index RBRACKET

    VAR             shift and go to state 89

    variable                       shift and go to state 88

state 23

    (82) if -> TESTONCE . LBRACKET math_expression RBRACKET LBRACKET NEWLINE state RBRACKET
    (83) if -> TESTONCE . LBRACKET compare RBRACKET LBRACKET NEWLINE state RBRACKET
    (84) if -> TESTONCE . error

    LBRACKET        shift and go to state 90
    error           shift and go to state 91


state 24

    (44) expression -> math_expression .
